--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,10 +20,10 @@
         android:theme="@style/Theme.Android_Final_Project"
         tools:targetApi="31">
         <activity
-            android:name=".ImageListActivity"
+            android:name=".old_project_package.ImageListActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".old_project_package.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
