--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,22 +21,23 @@
         android:theme="@style/Theme.Android_Final_Project"
         tools:targetApi="31">
         <activity
+            android:name=".TestOutputActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivityFrame"
             android:exported="true">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".old_project_package.ImageListActivity"
             android:exported="false" />
         <activity
             android:name=".old_project_package.MainActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
     </application>
 
 </manifest>
